# aufas_gw

./: .gitignore  CMakeLists.txt  README.md
components/carga/: CMakeLists.txt
components/carga/inc/: carga.hpp
components/carga/src/: carga.cpp
components/configman/: CMakeLists.txt
components/configman/inc/: configmanager.hpp
components/configman/src/: configmanager.cpp
components/esp32-wifi-manager/main/: CMakeLists.txt  wifi_manager.c  wifiman.code-workspace
components/mqttauto/: CMakeLists.txt  Kconfig.projbuild
components/mqttauto/inc/: mqtt.hpp
components/mqttauto/src/: mqtt.cpp
core/: CMakeLists.txt  Kconfig.projbuild
core/inc/: DHT22.h  header.hpp  spi.hpp
core/src/: funcoes.cpp  main.cpp  spi.cpp
